# github-trending-repos

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: daily-trending.yml
src/trending_repos/: __init__.py  config.py  email_sender.py  github_client.py  logger.py  main.py  summarizer.py
