[project]
name = "trending-repos"
version = "0.1.0"
description = "Daily GitHub trending repositories summary sent via email"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.25.0",
    "resend>=0.4.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trending_repos"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]
